# notification_service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  lifespan.py  main.py
app/alembic/: env.py
app/alembic/versions/: 1ff3928b66e9_extended_length_for_phone_number_field.py  66b54ccba3f5_fixed_name_of_notificationpreferance_.py  d210fe82d076_initial_tables.py  dc2b4fbceb16_fixed_typo_in_notificationpreferance.py  feda8d3c24ee_initial_data_for_notification_channel.py
app/core/: errors.py  logger.py  settings.py
app/dependancies/: __init__.py  notification_dependancy.py  user_dependancy.py
app/models/: __init__.py  mixins.py  models.py
app/oauth/: oauth.py
app/router/: __init__.py  notification_router.py  user_router.py
app/schemas/: schemas.py
app/services/notification_service/: __init__.py  notification_pref_repo.py  notification_repo_interface.py  notification_sender_protocol.py  notification_service.py  notification_strategies.py
app/services/notification_service/telegram/: client.py  telegram_strategy.py
app/services/user/: token_service.py  user_repo.py  user_service.py
app/tasks/: app.py  notification.py
app/utility/: password_hasher.py  validate_fields.py
