[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.5.8",
    "alembic>=1.17.2",
    "asgiref>=3.11.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery[async-task]>=5.6.1",
    "emoji>=2.15.0",
    "fastapi[all]>=0.128.0",
    "phonenumbers>=9.0.21",
    "python-jose>=3.5.0",
    "redis[async,asyncio]>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.45",
]
